added clang-format file; added dependency handling scripts and tools (Conan, Pip);

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,10 +7,49 @@
         "Ninja",
         "MinGW Makefiles"
     ],
+    "C_Cpp.formatting": "clangFormat",
+    "C_Cpp.clang_format_path": "C:/Program Files/llvm-mingw-20250305/bin/clang-format.exe",
+    "editor.formatOnSave": true,
     "files.associations": {
         "*.yml": "yaml",
         "*.yaml": "yaml",
         ".github/workflows/*": "yaml",
-        "algorithm": "cpp"
+        "algorithm": "cpp",
+        "__bit_reference": "cpp",
+        "__locale": "cpp",
+        "__node_handle": "cpp",
+        "__split_buffer": "cpp",
+        "__tree": "cpp",
+        "__verbose_abort": "cpp",
+        "array": "cpp",
+        "cctype": "cpp",
+        "clocale": "cpp",
+        "cmath": "cpp",
+        "cstddef": "cpp",
+        "cstdint": "cpp",
+        "cstdio": "cpp",
+        "cstdlib": "cpp",
+        "cstring": "cpp",
+        "cwchar": "cpp",
+        "execution": "cpp",
+        "memory": "cpp",
+        "fstream": "cpp",
+        "initializer_list": "cpp",
+        "ios": "cpp",
+        "iosfwd": "cpp",
+        "iostream": "cpp",
+        "istream": "cpp",
+        "limits": "cpp",
+        "locale": "cpp",
+        "map": "cpp",
+        "mutex": "cpp",
+        "new": "cpp",
+        "stdexcept": "cpp",
+        "streambuf": "cpp",
+        "string": "cpp",
+        "string_view": "cpp",
+        "typeinfo": "cpp",
+        "variant": "cpp",
+        "vector": "cpp"
     },
 }
