organized project folder hierarchy; added git submodules support; added docs, external, include, scripts, src and tests folders

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,12 @@
 # package managers
-vcpkg/
+external
+vcpkg
 conan*.bat
 deactivate_conan*.bat
+*.cmake
 
 # Prerequisites
-build/
+build
 *.d
 
 # Compiled Object files
